# legal-multi-agent-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  eval_outputs.json  pyproject.toml  slides.html
.cursor/rules/: backend-standards.mdc
src/: app.py  config.py  graph.py
src/agents/: core.py
src/eval/: core.py  ground_truth.json  recall.py  run_eval.py
src/ingest/: core.py
src/llm/: __init__.py  factory.py  gemini_api.py  ollama_api.py  openai_api.py
src/retrieval/: vectorstore.py
