[project]
name = "legal-multi-agent-rag"
version = "0.1.0"
description = "This Python and Gen AI based project is a multi-agent Retrieval-Augmented Generation (RAG) system designed for the automated analysis of legal contracts. It operates as an interactive, multi-turn console application that allows users to query a corpus of legal documents, such as NDAs and Service Agreements, using natural language."
authors = [
    {name = "Ayush Pandey",email = "ayushpandey.iitkgp@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
