[project]
name = "legal-multi-agent-rag"
version = "0.1.0"
description = "This Python and Gen AI based project is a multi-agent Retrieval-Augmented Generation (RAG) system designed for the automated analysis of legal contracts. It operates as an interactive, multi-turn console application that allows users to query a corpus of legal documents, such as NDAs and Service Agreements, using natural language."
authors = [
    {name = "Ayush Pandey",email = "ayushpandey.iitkgp@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "onnxruntime==1.16.3",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
ruff = ">=0.6.0"
mypy = ">=1.10.0"
pre-commit = ">=3.7.0"
